# zaBor

./: .editorconfig  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: zabor_example.yaml
data_samples/: README.md
docs/: bitget_order_plan.md
exchanges/bitget/: client.py
indicators/tradingview/zaBor_RSI_AO_Stoch_Entry_System/: CHANGELOG.md  LICENSE  README.md  User_Manual.md  zaBor_RSI_AO_Stoch_chart.pine  zaBor_RSI_AO_Stoch_indicator.pine
scripts/: bitget_order_plan.py
scripts/killswitch/: README.md  config.example.yaml  requirements.txt
scripts/killswitch/docs/: DEPLOYMENT.md  ENV_EXAMPLE.md  Killswitch_Guide_RU_v2_FINAL.docx  SECURITY.md  USER_GUIDE_RU.md
scripts/killswitch/src/: config.yaml  killswitch.env  killswitch.py  logger.py
tests/: test_smoke.py
